--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Aurora Nightfall",
   "description": "A vibrant rainbow-themed dark VS Code theme with uniquely colored syntax highlights across the spectrum.",
   "version": "0.0.1",
-  "publisher": "subin-abraham",
+  "publisher": "SubinAbraham",
   "license": "MIT", 
   "repository": "https://github.com/subin-abraham/Aurora-Nightfall.git",
   "keywords": [
